# underlay

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy.yml
public/: site.webmanifest  sw.js
scripts/: clean.sh
src/app/: 404.tsx  globals.css  layout.tsx  page.tsx
src/components/: audio-visualizer.tsx  help-dialog.tsx  settings-dialog.tsx  shader-visualizer.tsx
src/components/player/: advanced-controls.tsx  config-panel.tsx  control-knobs.tsx  layer-item.tsx  layer-list.tsx  layer-manager.tsx  mix-controls.tsx  notification-toast.tsx  payload-display.tsx  player.tsx  session-controls.tsx  session-status.tsx  transport-header.tsx  visualizer-container.tsx
src/components/ui/glass/: button.tsx  checkbox.tsx  dropdown.tsx  index.ts  knob.tsx  numeric-drag-input.tsx  panel.tsx  select.tsx  slider.tsx  toggle.tsx  tooltip.tsx
src/contexts/: platform-context.tsx  tooltip-context.tsx
src/hooks/: use-audio-session.ts  use-lyria-session.ts  use-session-timer.ts  use-settings.ts  use-vst-sync.ts
src/lib/: audio-analyzer.ts  constants.ts  glass-effects.ts  platform.ts  theme-init.ts  utils.ts
src/styles/: base.css  glass-components.css
src/styles/themes/: dark-cinematic.css  dark.css  glass.css
src/types/: lyria.ts
vst/: CMakeLists.txt  Info.plist.in  README.md
vst/scripts/: build-and-package.sh  build-vst.sh  create-pkg-installer.sh
vst/src/: DebugLog.h  PluginIDs.h  PluginProcessor.cpp  SharedAudioBuffer.h  UnderlayController.h  UnderlayController.mm  UnderlayVST.cpp  UnderlayVST.h  WebViewBridge.h  WebViewBridge.mm
